# flask-presence-logger

./: Dockerfile  README.md  docker-compose.yml  main.py  presence.json  pyproject.toml
static/: app.html  style.css
